tests/positive/rule4_deref.safe
-- Test: rule4_deref
-- Description: Simple implicit dereference with not-null proof.
-- Expected: ACCEPT

package safe_deref

   subtype data is integer (0 to 1000)

   type data_box is record
      value : data
      next : data_box

   function read_value (p : not null data_box) returns data
      return p.value

   function write_value (p : mut data_box; v : data)
      p.value = v
