tests/negative/neg_pr117_lowercase_access_field.safe
-- Test: neg_pr117_lowercase_access_field
-- Description: Reference-signal naming requires access-typed record fields to start uppercase.
-- Expected: REJECT source_frontend_error

package neg_pr117_lowercase_access_field

   type node;
   type node_ptr is access node;

   type node is record
      value : integer;
      next  : node_ptr;

   function demo (Head : node_ptr) returns integer
      if Head == null
         return 0;

      return Head.next.value;
